# VMP-ui

./: .clang-format  .clang-tidy  .clangd  .gitignore  .markdownlintignore  CMakeLists.txt  Doxyfile  README.md  _fix_mojibake.py  问题日志.md  需求.md  需求2.md  需求文档.md
example/ui_demo/: CMakeLists.txt  main.cpp
example/ui_demo/View/: Logging.hpp  Mainwindow.h  menu.h
src/: CMakeLists.txt  EmbedResources.cmake  pch.hpp
src/api/: Animation.cpp  Animation.hpp  Canvas.cpp  Canvas.hpp  Chains.hpp  Controls.cpp  Controls.hpp  Entity.hpp  Factory.cpp  Factory.hpp  Hierarchy.cpp  Hierarchy.hpp  Icon.cpp  Icon.hpp  Image.hpp  Layout.cpp  Layout.hpp  Log.cpp  Log.hpp  Query.cpp  Query.hpp  Scale.hpp  Shortcut.cpp  Shortcut.hpp  Size.cpp  Size.hpp  State.hpp  Table.cpp  Table.hpp  Text.cpp  Text.hpp  Theme.cpp  Theme.hpp  Utils.cpp  Utils.hpp  Visibility.cpp  Visibility.hpp
src/assets/shader/: common.hlsl  frag.dxil  frag.hlsl  frag.spv  vert.dxil
src/client/: main.cpp  pch.hpp
src/client/View/: Mainwindow.h  menu.h
src/common/: AppConfig.hpp  Components.hpp  CustomizationPoints.hpp  EntityTypes.hpp  ErrorCodes.cpp  ErrorCodes.hpp  Events.hpp  GlobalContext.hpp  Policies.hpp  RenderTypes.hpp  Result.hpp  Tags.hpp  ThreadPool.hpp  Types.hpp  WindowEntityLookup.hpp  WindowSync.hpp
src/common/components/: Animation.hpp  Data.hpp  Interaction.hpp  Layout.hpp  Visual.hpp  Window.hpp
src/core/: Application.cpp  Application.hpp  Batcher.hpp  DslPaser.hpp  EventLoop.cpp  EventLoop.hpp  PlatformWindow.cpp  PlatformWindow.hpp  RenderContext.hpp  RuntimeFacade.cpp  RuntimeFacade.hpp  SystemManager.cpp  SystemManager.hpp  TaskChain.hpp  TextEditingService.hpp  TextUtils.hpp  UiRuntime.hpp  WorkerMailbox.cpp  WorkerMailbox.hpp
src/interface/: IBackendRenderer.hpp  IRenderer.hpp  ISystem.hpp  Isystem.hpp
src/managers/: BatchManager.hpp  CommandBuffer.hpp  DeviceManager.hpp  FontAtlasManager.hpp  FontManager.cpp  FontManager.hpp  IconManager.cpp  IconManager.hpp  ImageManager.cpp  ImageManager.hpp  PipelineCache.hpp  ResourceProvider.cpp  ResourceProvider.hpp  StdEmbedResourceTable.cpp  TextRenderHelper.hpp  TextTextureCache.cpp  TextTextureCache.hpp  TextureAtlas.hpp
src/net/: pch.hpp
src/renderers/: CanvasRenderer.hpp  CheckBoxRenderer.hpp  DropDownRenderer.hpp  FallbackBackendRenderer.hpp  IconRenderer.hpp  ImageRenderer.hpp  ProgressBarRenderer.hpp  ScrollBarRenderer.hpp  ShapeRenderer.hpp  SliderRenderer.hpp  TableRenderer.cpp  TableRenderer.hpp  TextRenderer.hpp
src/server/: pch.hpp
src/services/: TextEditingService.cpp  TextEditingService.hpp
src/singleton/: Dispatcher.hpp  Logger.hpp  Registry.hpp  SingletonBase.hpp
src/systems/: ActionSystem.hpp  HitTestSystem.cpp  HitTestSystem.hpp  InteractionSystem.hpp  LayoutSystem.cpp  LayoutSystem.hpp  PlatformWindowSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShortcutSystem.hpp  StateSystem.cpp  StateSystem.hpp  TextInputSystem.hpp  ThemeSystem.cpp  ThemeSystem.hpp  TimerSystem.cpp  TimerSystem.hpp  TweenSystem.hpp
src/systems/render/: RenderBackend.cpp  RenderFrame.cpp  RenderResources.cpp  RenderSystemImpl.hpp
src/traits/: ComponentsTraits.hpp  Contains.hpp  EventTraits.hpp  MyPFR.hpp  PoliciesTraits.hpp  TaskTraits.hpp
src/ui/: CMakeLists.txt  GenerateStdEmbedResourceTable.cmake
src/ui/api/: Animation.hpp  Canvas.cpp  Canvas.hpp  Chains.hpp  Controls.cpp  Controls.hpp  Factory.cpp  Factory.hpp  Hierarchy.cpp  Hierarchy.hpp  Icon.cpp  Layout.cpp  Log.hpp  Size.cpp  Size.hpp  Utils.cpp  Utils.hpp  Visibility.cpp  Visibility.hpp
src/ui/assets/shader/: common.hlsl  compile.bat  compile.sh  frag.dxil  frag.hlsl  frag.spv  vert.dxil  vert.hlsl  vert.spv
src/ui/common/: Components.hpp  CustomizationPoints.hpp  Events.hpp  GPUWrappers.hpp  GlobalContext.hpp  Policies.hpp  RenderTypes.hpp  Tags.hpp  Types.hpp  UiErrors.hpp  WindowEntityLookup.hpp  WindowSync.hpp
src/ui/core/: Application.cpp  Application.hpp  Batcher.hpp  PlatformWindow.cpp  PlatformWindow.hpp  RenderContext.hpp  RuntimeFacade.cpp  RuntimeFacade.hpp  SystemManager.cpp  TaskChain.hpp  TextEditingService.hpp  UiRuntime.hpp
src/ui/docs/: 2026-3-3.md  ARCHITECTURE_REVIEW.md  DPI_AND_COORDINATES.md  EXTENSION_AND_ROADMAP.md  README.md  RENDERING_PIPELINE.md  fallback-renderer-design.md  ui-architecture-review-2026-03-24.md  ui-next-steps.md
src/ui/docs/baseline/: ui-design-baseline-2026-03-26.md
src/ui/docs/phase/: ui-phase1-runtime-facade-draft-2026-03-26.md  ui-runtime-roadmap-2026-03-26.md
src/ui/docs/reference/: BatchManager.md  ResourceProvider.md  ui-components-status.md  (+2 more)
src/ui/interface/: IBackendRenderer.hpp
src/ui/managers/: BatchManager.hpp  CommandBuffer.hpp  DeviceManager.hpp  FontAtlasManager.hpp  FontManager.hpp  IconManager.cpp  ImageManager.hpp  PipelineCache.hpp  ResourceProvider.cpp  StdEmbedResourceTable.hpp  TextTextureCache.hpp
src/ui/renderers/: CanvasRenderer.hpp  DropDownRenderer.hpp  FallbackBackendRenderer.hpp  IconRenderer.hpp  ProgressBarRenderer.hpp  SliderRenderer.hpp  TextRenderer.hpp
src/ui/singleton/: Dispatcher.hpp  Registry.hpp
src/ui/systems/: ActionSystem.hpp  HitTestSystem.hpp  InteractionSystem.hpp  LayoutSystem.cpp  LayoutSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShortcutSystem.cpp  ShortcutSystem.hpp  StateSystem.hpp  TextInputSystem.hpp  TimerSystem.cpp  TimerSystem.hpp  TweenSystem.hpp
src/ui/traits/: MyPFR.hpp
src/ui/ui/: ui.hpp
src/utils/: Dispatcher.h
tests/unittest/: CMakeLists.txt  test_BatchManager.cpp  test_DragDrop.cpp  test_HierarchyCoverage.cpp  test_MainWindow.cpp  test_ResourceProviderCoverage.cpp  test_TaskChain.cpp  test_TextUtils.cpp  test_ThemeSystem.cpp  test_TweenSystem.cpp  test_UiRuntime.cpp  test_UmbrellaHeader.cpp  test_UtilsCoverage.cpp  test_VisibilityCoverage.cpp  test_result.cpp
tests/unittest/ui/: CMakeLists.txt  test_BatchManager.cpp  test_HierarchyCoverage.cpp  test_MainWindow.cpp  test_ResourceProviderCoverage.cpp  test_TaskChain.cpp  test_TextUtils.cpp  test_TweenSystem.cpp  test_UiRuntime.cpp  test_UtilsCoverage.cpp  test_VisibilityCoverage.cpp
(+73 files in other folders)
